Added help window. Redid how i showed the windows when using the navigation bar. commented most code.

--- a/DesktopManager/DesktopManager.csproj
+++ b/DesktopManager/DesktopManager.csproj
@@ -57,6 +57,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AdminCheck.cs" />
+    <Compile Include="Help.xaml.cs">
+      <DependentUpon>Help.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PlaceHolderWindow.xaml.cs">
       <DependentUpon>PlaceHolderWindow.xaml</DependentUpon>
     </Compile>
@@ -65,6 +68,10 @@
     </Compile>
     <Compile Include="SettingsOptions.cs" />
     <Compile Include="Viewer.cs" />
+    <Page Include="Help.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
