Added PerformanceInfoClass.cs as a API. its a microsoft API Added memory usage with API

--- a/DesktopManager/DesktopManager.csproj
+++ b/DesktopManager/DesktopManager.csproj
@@ -63,6 +63,7 @@
     <Compile Include="MoreProcessInformation.xaml.cs">
       <DependentUpon>MoreProcessInformation.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PerformanceInfoClass.cs" />
     <Compile Include="PlaceHolderWindow.xaml.cs">
       <DependentUpon>PlaceHolderWindow.xaml</DependentUpon>
     </Compile>
