--- a/DesktopManager/DesktopManager.csproj
+++ b/DesktopManager/DesktopManager.csproj
@@ -85,6 +85,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AdminCheck.cs" />
+    <Compile Include="DriveItem.cs" />
     <Compile Include="Help.xaml.cs">
       <DependentUpon>Help.xaml</DependentUpon>
     </Compile>
