Added Icon for windows. Found in google. https://icons8.com/icons/set/task-manager

--- a/DesktopManager/DesktopManager.csproj
+++ b/DesktopManager/DesktopManager.csproj
@@ -178,5 +178,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="System-Task-Manager.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
